crocodile: clean-up board files
- Fix UART3 clock enablement
- Change board Kconfig define name
- Correct mkimage script
- Adapt MAINTAINERS file
- Correct some environment variables

Signed-off-by: Andrey Zhizhikin <andrey.zhizhikin@leica-geosystems.com>

--- a/arch/arm/mach-imx/imx8m/Kconfig
+++ b/arch/arm/mach-imx/imx8m/Kconfig
@@ -28,13 +28,6 @@ choice
 	prompt "NXP i.MX8M board select"
 	optional
 
-config TARGET_CROCODILE
-	bool "Leica crocodile board"
-	select BINMAN
-	select IMX8MM
-	select SUPPORT_SPL
-	select IMX8M_LPDDR4
-
 config TARGET_IMX8MQ_CM
 	bool "Ronetix iMX8MQ-CM SoM"
 		select BINMAN
@@ -163,6 +156,13 @@ config TARGET_IMX8MM_CL_IOT_GATE
 
 config TARGET_IMX8MM_CL_IOT_GATE_OPTEE
 	bool "CompuLab iot-gate-imx8 with optee support"
+	select BINMAN
+	select IMX8MM
+	select SUPPORT_SPL
+	select IMX8M_LPDDR4
+
+config TARGET_IMX8MM_LEICA_CROCODILE
+	bool "Leica Crocodile (GS05) board"
 	select BINMAN
 	select IMX8MM
 	select SUPPORT_SPL
