--- a/board/leica/crocodile/Kconfig
+++ b/board/leica/crocodile/Kconfig
@@ -1,4 +1,4 @@
-if TARGET_CROCODILE
+if TARGET_IMX8MM_LEICA_CROCODILE
 
 config SYS_BOARD
 	default "crocodile"
@@ -10,6 +10,6 @@ config SYS_CONFIG_NAME
 	default "crocodile"
 
 config IMX_CONFIG
-	default "board/freescale/crocodile/imximage-8mm-lpddr4.cfg"
+	default "board/leica/crocodile/imximage-8mm-lpddr4.cfg"
 
 endif
