arm: dts: crocodile: correct uart3 settings
Change PAD config and remove DMA properties.

Signed-off-by: Andrey Zhizhikin <andrey.zhizhikin@leica-geosystems.com>

--- a/arch/arm/dts/crocodile.dts
+++ b/arch/arm/dts/crocodile.dts
@@ -18,3 +18,11 @@
 	/delete-property/ phy-reset-gpios;
 	/delete-property/ phy-reset-duration;
 };
+
+&uart3 {
+	/*
+	 * delete DMA properties from UART
+	 */
+	/delete-property/ dmas;
+	/delete-property/ dma-names;
+};
