--- a/configs/crocodile_fspi_defconfig
+++ b/configs/crocodile_fspi_defconfig
@@ -6,13 +6,13 @@ CONFIG_SYS_MALLOC_F_LEN=0x10000
 CONFIG_SPL_GPIO=y
 CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
-CONFIG_ENV_SIZE=0x1000
-CONFIG_ENV_OFFSET=0x400000
 CONFIG_DM_GPIO=y
-CONFIG_DEFAULT_DEVICE_TREE="crocodile"
-CONFIG_SPL_TEXT_BASE=0x7E1000
+CONFIG_DEFAULT_DEVICE_TREE="crocodile-fspi"
+CONFIG_SPL_TEXT_BASE=0x7E2000
 CONFIG_TARGET_IMX8MM_LEICA_CROCODILE=y
-CONFIG_SPL_MMC=y
+CONFIG_IMX_CONFIG="board/leica/crocodile/imximage-8mm-lpddr4-fspi.cfg"
+CONFIG_DEFAULT_FDT_FILE="crocodile.dtb"
+CONFIG_SPL_NOR_SUPPORT=y
 CONFIG_SPL_SERIAL=y
 CONFIG_SPL_DRIVERS_MISC=y
 CONFIG_SPL=y
@@ -44,7 +44,7 @@ CONFIG_CMD_EXT4_WRITE=y
 CONFIG_OF_CONTROL=y
 CONFIG_SPL_OF_CONTROL=y
 CONFIG_ENV_OVERWRITE=y
-CONFIG_ENV_IS_IN_MMC=y
+CONFIG_ENV_IS_NOWHERE=y
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_SYS_MMC_ENV_DEV=2
 CONFIG_ENV_VARS_UBOOT_RUNTIME_CONFIG=y
