crocodile: make address and size of boot script configurable
Add config for address and size of boot script and use it in default
environment command `loadbootscript`.

Signed-off-by: Thomas Haemmerle <thomas.haemmerle@leica-geosystems.com>

--- a/board/leica/crocodile/Kconfig
+++ b/board/leica/crocodile/Kconfig
@@ -12,4 +12,16 @@ config SYS_CONFIG_NAME
 config IMX_CONFIG
 	default "board/leica/crocodile/imximage-8mm-lpddr4.cfg"
 
+config LEICA_BOOTSCRIPT_EMMC_ADDR
+	hex "Bootscript address in blocks on eMMC"
+	default 0x32
+	help
+	  Address in blocks on eMMC bootscript is loaded from.
+
+config LEICA_BOOTSCRIPT_EMMC_SIZE
+	hex "Bootscript size in blocks on eMMC"
+	default 0x8
+	help
+	  Size in blocks of bootscript on eMMC.
+
 endif
