crocodile: provide command to boot from QSPI NOR flash
Add command for booting from QSPI NOR flash to default environment. The
address and size of the image to load, are taken from two additional
configs. As the size of the connected NOR flash is fetched dynamically
during `sf probe`, a sanity check for these two configs makes no sense
at build-time.

Signed-off-by: Thomas Haemmerle <thomas.haemmerle@leica-geosystems.com>

--- a/board/leica/crocodile/Kconfig
+++ b/board/leica/crocodile/Kconfig
@@ -11,6 +11,14 @@ config SYS_CONFIG_NAME
 
 config IMX_CONFIG
 	default "board/leica/crocodile/imximage-8mm-lpddr4.cfg"
+	
+config LEICA_FSPI_NOR_IMG_ADDR
+	hex "Address of image to be booted from NOR flash in bytes"
+	default 0x200000
+
+config LEICA_FSPI_NOR_IMG_SIZE
+	hex "Size of image to be booted from NOR flash in bytes"
+	default 0x1600000
 
 config LEICA_BOOTSCRIPT_EMMC_ADDR
 	hex "Bootscript address in blocks on eMMC"
