crocodile: boot image from QSPI NOR flash for `crocodile_fspi_defconf`
Provide config to select if `CONFIG_BOOTCOMMAND` shall be set to boot
from eMMC or from QSPI NOR flash and enable QSPI-boot for
`crocodile_fspi_defconf`.

Signed-off-by: Thomas Haemmerle <thomas.haemmerle@leica-geosystems.com>

--- a/board/leica/crocodile/Kconfig
+++ b/board/leica/crocodile/Kconfig
@@ -12,6 +12,10 @@ config SYS_CONFIG_NAME
 config IMX_CONFIG
 	default "board/leica/crocodile/imximage-8mm-lpddr4.cfg"
 	
+config LEICA_FSPI_NOR_BOOTFLOW
+	bool "Select bootflow for NOR boot"
+	default n
+
 config LEICA_FSPI_NOR_IMG_ADDR
 	hex "Address of image to be booted from NOR flash in bytes"
 	default 0x200000
