--- a/configs/crocodile_fspi_defconfig
+++ b/configs/crocodile_fspi_defconfig
@@ -11,6 +11,7 @@ CONFIG_DEFAULT_DEVICE_TREE="crocodile-fspi"
 CONFIG_SPL_TEXT_BASE=0x7E2000
 CONFIG_TARGET_IMX8MM_LEICA_CROCODILE=y
 CONFIG_IMX_CONFIG="board/leica/crocodile/imximage-8mm-lpddr4-fspi.cfg"
+CONFIG_LEICA_FSPI_NOR_BOOTFLOW=y
 CONFIG_DEFAULT_FDT_FILE="crocodile.dtb"
 CONFIG_SPL_NOR_SUPPORT=y
 CONFIG_SPL_SERIAL=y
