--- a/configs/crocodile_defconfig
+++ b/configs/crocodile_defconfig
@@ -89,6 +89,7 @@ CONFIG_SPI=y
 CONFIG_DM_SPI=y
 CONFIG_DM_SPI_FLASH=y
 CONFIG_SPI_FLASH_STMICRO=y
+CONFIG_SPI_FLASH_GIGADEVICE=y
 CONFIG_SF_DEFAULT_BUS=3
 CONFIG_SF_DEFAULT_CS=0
 CONFIG_SF_DEFAULT_SPEED=80000000
