WIP: Add support for generating fspi header from configuration block
Add struct with Flex SPI Configuration Block and enable generating
fspi header using mkimage in device tree.
Add options in Kconfig to set FlexSPI Configuration block parameters

Signed-off-by: Mamta Shukla <mamta.shukla@leica-geosystems.com>

--- a/arch/arm/dts/crocodile-fspi-u-boot.dtsi
+++ b/arch/arm/dts/crocodile-fspi-u-boot.dtsi
@@ -13,9 +13,9 @@
 		pad-byte = <0x00>;
 		
 		fspi_conf_block {
-			filename = "board/leica/crocodile/fspi_conf.bin";
-			offset = <0x00>;
+			filename = CONFIG_FSPI_CONF_FILE;
 			type = "blob-ext";
+			size = <0x1000>;
 		};
 
 		spl {
