--- a/configs/crocodile_fspi_defconfig
+++ b/configs/crocodile_fspi_defconfig
@@ -95,3 +95,11 @@ CONFIG_SF_DEFAULT_BUS=3
 CONFIG_SF_DEFAULT_CS=0
 CONFIG_SF_DEFAULT_SPEED=80000000
 CONFIG_SF_DEFAULT_MODE=0
+CONFIG_FSPI_CONF_HEADER=y
+CONFIG_FSPI_CONF_FILE="fspi_header.bin"
+CONFIG_READ_CLK_SOURCE=0x00
+CONFIG_DEVICE_TYPE=0x01
+CONFIG_FLASH_PAD_TYPE=0x01
+CONFIG_SERIAL_CLK_FREQUENCY=0x02
+CONFIG_LUT_CUSTOM_SEQUENCE=0x00
+CONFIG_LUT_SEQUENCE="0x0b, 0x04, 0x18,0x08,0x08, 0x30, 0x04,0x24"
