crocodile: Add support for generating QSPI header using mkimage
Add struct with Flex SPI Configuration Block and enable generating
fspi header using mkimage in device tree.
Add options in Kconfig to set FlexSPI Configuration block parameter.
Refer i.MX 8M Mini Application Processor Reference Manual for
detailed information about parameters for FlexSPI Configuration block.

Signed-off-by: Mamta Shukla <mamta.shukla@leica-geosystems.com>

--- a/arch/arm/dts/crocodile-fspi-u-boot.dtsi
+++ b/arch/arm/dts/crocodile-fspi-u-boot.dtsi
@@ -11,11 +11,11 @@
 	imx-boot-fspi {
 		filename = "flash.bin";
 		pad-byte = <0x00>;
-		
+
 		fspi_conf_block {
-			filename = "board/leica/crocodile/fspi_conf.bin";
-			offset = <0x00>;
+			filename = CONFIG_FSPI_CONF_FILE;
 			type = "blob-ext";
+			size = <0x1000>;
 		};
 
 		spl {
